update dev structure
update dev structure, a carousel component

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <title>Henry Ventura e-commerce</title>
-</head>
-<body>
-    <h1>Henry Ventura e-commerce</h1>
+  </head>
+  <body>
+    <div id="root">
+      <div class="info-banner">
+        <h3>Gratis verzending vanaf €30</h3>
+      </div>
+      <header class="header">
+        <div class="title-section">
+          <div class="decoration"></div>
+          <h3>
+            Discover our<span class="line-break"></span> <span class="planet-friendly"> planet-friendly</span> offer
+          </h3>
+        </div>
+        <div class="controls">
+          <div class="control">
+            <button type="button" class="btn"><i class="prev"><</i></button>
+          </div>
+          <div class="control">
+            <button type="button" class="btn"><i class="next">></i></button>
+          </div>
+        </div>
+      </header>
+            <div class="products-carousel"></div>
+      
+    </div>
     <script src="../dist/bundle.js"></script>
-</body>
+  </body>
 </html>
