update cards, add buttons
update cards, add buttons

--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,20 @@
       <header class="header">
         <div class="title-section">
           <div class="decoration"></div>
-          <h3>
+          <h3 class="title">
             Discover our<span class="line-break"></span> <span class="planet-friendly"> planet-friendly</span> offer
           </h3>
         </div>
         <div class="controls">
-          <div class="control">
-            <button type="button" class="btn"><i class="prev"><</i></button>
+          <div class="content-control">
+            <button type="button" class="btn control prev"><</button>
           </div>
-          <div class="control">
-            <button type="button" class="btn"><i class="next">></i></button>
+          <div class="content-control">
+            <button type="button" class="btn control next">></button>
           </div>
         </div>
       </header>
-            <div class="products-carousel"></div>
-      
+      <div class="products-carousel"></div>
     </div>
     <script src="../dist/bundle.js"></script>
   </body>
