--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
     <title>Henry Ventura e-commerce</title>
   </head>
   <body>
@@ -28,6 +28,15 @@
         </div>
       </header>
       <div class="products-carousel"></div>
+
+      <section class="newsletter">
+        <h3>Subscribe to our newsletter</h3>
+        <form id="newsletter-form">
+          <input type="email" id="email" placeholder="Enter your email" required>
+          <button type="submit">Subscribe</button>
+        </form>
+        <div id="message"></div>
+      </section>
     </div>
     <script src="../dist/bundle.js"></script>
   </body>
