--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="controls">
           <div class="content-control">
-            <button type="button" class="btn control prev"><</button>
+            <button type="button" class="btn control prev">a</button>
           </div>
           <div class="content-control">
-            <button type="button" class="btn control next">></button>
+            <button type="button" class="btn control next">a</button>
           </div>
         </div>
       </header>
