--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,13 @@
           </div>
         </div>
       </header>
-      <div class="products-carousel"></div>
+
+      <div class="products-carousel">
+        <div id="loading-spinner" class="spinner hidden">
+          <div class="loader"></div>
+        </div>
+      </div>
+      
       <section class="central-section">
         <button title="button" type="button" class="btn hero">Browse all products</button>
       </section>
