--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../src/assets/favicon/favicon.ico" />
     <title>Henry Ventura e-commerce</title>
   </head>
   <body>
@@ -37,9 +37,9 @@
         <button title="button" type="button" class="btn hero">Browse all products</button>
       </section>
       <footer class="footer">
-        <img class="tablet-blurred" src="assets/images/tablet-blurred.png" alt="pilule de bain"/>
-        <img class="tablet-green" src="assets/images/tablet-green.png" alt="pilule de bain"/>
-        <img class="tablet-rose" src="assets/images/tablet-rose.png" alt="pilule de bain"/>
+        <img class="tablet-blurred" src="https://i.ibb.co/fN1mCbC/tablet-blurred.png" alt="pilule de bain"/>
+        <img class="tablet-green" src="https://i.ibb.co/Ky18Y71/tablet-green.png" alt="pilule de bain"/>
+        <img class="tablet-rose" src="https://i.ibb.co/M6gmPZq/tablet-rose.png" alt="pilule de bain"/>
         <section class="newsletter">
           <h3 class="newsletter-title desktop">Join the green revolution without<span class="break"> commitment</span></h3>
           <p class="newsletter-info desktop">
@@ -58,9 +58,9 @@
           <div id="message" class="message"></div>
 
         </section>
-        <img class="tablet-blue" src="assets/images/tablet-blue.png" alt="pilule de bain"/>
-        <img class="tablet-white" src="assets/images/tablet-white.png" alt="pilule de bain"/>
+        <img class="tablet-blue" src="https://i.ibb.co/wQ62zgT/tablet-blue.png" alt="pilule de bain"/>
+        <img class="tablet-white" src="https://i.ibb.co/fkyxyRK/tablet-white.png" alt="pilule de bain"/>
       </footer>
-    <script src="../dist/bundle.js"></script>
-  </body>
+      <script src="app.bundle.js"></script>
+    </body>
 </html>
