--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,9 @@
         <button title="button" type="button" class="btn hero">Browse all products</button>
       </section>
       <footer class="footer">
-        <img class="tablet-blurred" src="./images/tablet-blurred.png" alt="pilule de bain"/>
-        <img class="tablet-green" src="./images/tablet-green.png" alt="pilule de bain"/>
-        <img class="tablet-rose" src="./images/tablet-rose.png" alt="pilule de bain"/>
+        <img class="tablet-blurred" src="../src/assets/images/tablet-blurred.png" alt="pilule de bain"/>
+        <img class="tablet-green" src="../src/assets/images/tablet-green.png" alt="pilule de bain"/>
+        <img class="tablet-rose" src="../src/assets/images/tablet-rose.png" alt="pilule de bain"/>
         <section class="newsletter">
           <h3 class="newsletter-title desktop">Join the green revolution without<span class="break"> commitment</span></h3>
           <p class="newsletter-info desktop">
@@ -57,8 +57,8 @@
           <div id="message" class="message"></div>
 
         </section>
-        <img class="tablet-blue" src="./images/tablet-blue.png" alt="pilule de bain"/>
-        <img class="tablet-white" src="./images/tablet-white.png" alt="pilule de bain"/>
+        <img class="tablet-blue" src="../src/assets/images/tablet-blue.png" alt="pilule de bain"/>
+        <img class="tablet-white" src="../src/assets/images/tablet-white.png" alt="pilule de bain"/>
       </footer>
       <script src="app.bundle.js"></script>
     </body>
